<resources>
    <string name="app_name">Qualtech App</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter Country Name</string>
    <string name="for_eg_india">For Eg: India</string>
    <string name="enter_capital_name">Enter Capital Name</string>
    <string name="for_eg_new_delhi">For Eg: New Delhi</string>
    <string name="enter_region">Enter Region</string>
    <string name="for_eg_asia">For Eg: Asia</string>
    <string name="enter_sub_region">Enter Sub-Region</string>
    <string name="for_eg_south_asia">For Eg: South Asia</string>
    <string name="enter_population">Enter Population</string>
    <string name="for_eg_20041020">For Eg: 20041020</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="for_eg_33_0">For Eg: 33.0</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="for_eg_67_7">For Eg: 67.7</string>
    <string name="add_country">Add Country</string>
    <string name="capital">Capital: </string>
    <string name="region">Region:</string>
    <string name="sub_region">Sub Region:</string>
    <string name="space_capital">(Capital)</string>
    <string name="space_region">(Region)</string>
    <string name="country_flag">Country Flag</string>
    <string name="see_data">See Data</string>
    <string name="population">Population:</string>
    <string name="languages_spoken">Languages Spoken:</string>
    <string name="reload_data">Reload Data</string>
    <string name="show_on_map">Show on map</string>
    <string name="entry_country_code">Entry Country Code</string>
    <string name="enter_languages_spoken">Enter Languages Spoken</string>
    <string name="loading_countries">Loading countries…</string>
</resources>
