<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.akshit.qualtechapp.InputCountryDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/country_code_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_country_code" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/capital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_capital_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_region" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sub_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_sub_region" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/languages_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_languages_spoken" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_population"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/latitude_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_latitude"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/longitude_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_longitude"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
