<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akshit.qualtechapp.DetailActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/update_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_mode_edit_white_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_delete_white_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_flag_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/country_flag"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/country_name_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLength="23"
                                android:scrollHorizontally="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/white"
                                android:textSize="32sp"
                                tools:text="India" />

                            <TextView
                                android:id="@+id/country_code_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/white"
                                android:textSize="24sp"
                                tools:text="(IND)" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/capital_name_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                tools:text="New Delhi" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"
                                android:text="@string/space_capital"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@android:color/white"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_public_white_48dp"
                            android:tint="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/region"
                                android:textColor="@color/black"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/region_name_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text"
                                android:textSize="20sp"
                                tools:text="Asia" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_place_white_48dp"
                            android:tint="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sub_region"
                                android:textColor="@color/black"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/sub_region_name_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text"
                                android:textSize="20sp"
                                tools:text="South Asia" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_people_white_48dp"
                            android:tint="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/population"
                                android:textColor="@color/black"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/population_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text"
                                android:textSize="20sp"
                                tools:text="2000000" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_language_white_48dp"
                            android:tint="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/languages_spoken"
                                android:textColor="@color/black"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/languages_detail_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text"
                                android:textSize="20sp"
                                tools:text="English, Hindi" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
